--- a/public/contact.css
+++ b/public/contact.css
@@ -1,15 +1,24 @@
+html,body{
+    height: 100%;
+}
+body{
+    font-family: Arial, sans-serif;
+    margin: 0;
+    background-color: #FBF8F1;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 .container{
-  /* display: flex;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-  justify-content: space-evenly; */
+  flex: 1;
   padding: 1rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 3rem;
   max-width: 1200px;
-  margin: 2rem auto;
+  margin: 2rem auto 0 auto;
+  align-items: start;
 }
 .contact_container {
   display: flex;
