--- a/public/projects.css
+++ b/public/projects.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
     gap: 20px;
     padding: 20px;
     margin-bottom: 50px;
@@ -9,11 +10,12 @@
 }
 .project_card {
     height: auto;
-    width: 350px;
+    width: 90%;
     background-color: #F3EFE6;
     border-radius: 15px;
     padding: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .img img {
     height: 200px;
@@ -33,6 +35,10 @@
     margin: 5px 5px 0 0;
     font-size: 0.8rem;
     border: 1px solid #2F7F7A;
+}
+.project_card:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 
