--- a/public/style.css
+++ b/public/style.css
@@ -2,14 +2,18 @@ body{
     font-family: Arial, sans-serif;
     margin: 0;
     background-color: #FBF8F1;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 header{
     height:10vh;
     padding: 0 1rem;
-    margin: 0;
+    margin-bottom: 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 main{
     min-height:70vh;
@@ -30,16 +34,21 @@ footer{
     width: 100%;
     padding-bottom: 1rem;
     background-color: #F3EFE6;
+
 }
 .footer{
     padding: 2rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+
 }
 .below_footer{
     border-top:1px solid rgba(0, 0, 0, 0.09);
     text-align: center;
+    /* padding: 0; */
 }
 .space a{
     display: block;
@@ -62,7 +71,20 @@ header a {
     height: auto;
     width: auto;
     background-color:#F2B544;
+    /* color: white; */
+    padding: 10px 15px;
+    border-radius:18px;
+    cursor: pointer;
+}
+.download a {
     color: white;
+    text-decoration: none;
+}
+.download1{
+    height: auto;
+    width: 180px;
+    background-color:#F2B544;
+    /* color: white; */
     padding: 10px 15px;
     border-radius:18px;
     cursor: pointer;
@@ -87,16 +109,60 @@ header a {
 .links a:hover::after {
   width: 100%;
 }
-
-@media (max-width: 768px) {
-    .footer, .main {
-        flex-direction: column;
-        /* align-items: center; */
-    }
-}
 .middle{
     height: 300px;
     width: 300px;
     background-color: #F3EFE6;
     border-radius: 50%;
+}
+.hamburger{
+    display: none;
+}
+.drop{
+    display: none;
+}
+.close{
+    font-size: 28px;
+    cursor: pointer;
+    font-weight: bold;
+    opacity:0.9
+}
+
+@media (max-width: 768px) {
+    .footer, .main {
+        flex-direction: column;
+    }
+}
+@media (max-width:900px){
+    .hamburger{
+        display: block;
+    }
+    .links,.download{
+        display: none;
+    }
+    .drop{
+        padding: 1rem;
+        position: fixed;          
+        top: 0;                   
+        left: 0;
+        right: 0;
+        width: 100%;
+        background-color: #F3EFE6;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 2rem;
+
+        transform: translateY(-100%);
+        transition: transform 0.3s ease-in-out;
+        z-index: 999;            
+    }
+
+    .drop.active{
+        transform: translateY(0);
+    }
+    .drop a{
+        text-decoration: none;
+    }
 }
