--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-        <header>
+    <header>
         <div class="name" ><h2>Lokesh Ramineni</h2></div>
         <div class="social-icons" >
             <a href="https://www.linkedin.com/in/lokesh-ramineni-43bbb43a4/"> <i class="fa-brands fa-linkedin-in"></i></a>
@@ -22,7 +22,37 @@
             <a href="/about">About</a>
             <a href="/contact">contact</a>
         </div>
-        <div class="download"><i class="fa-solid fa-download" style="margin-right: 0.2rem;"></i>Download Resume</div> 
+        <div class="download">
+            <a href="./resume.pdf" download><i class="fa-solid fa-download" style="margin-right: 0.2rem;"></i>Download Resume</a>
+        </div>
+        <div class="hamburger" onclick=dropdown()>
+            <i class="fa-solid fa-bars"></i>
+        </div>   
+        <div class="drop">
+            <div class="close" onclick=dropdown()>
+                <i class="fa-solid fa-xmark"></i>
+            </div>
+            <div>
+                <a href="/" style="color:#2F7F7A">( Home )</a>
+            </div>
+            <div>
+                <a href="/skills">Skills</a>
+            </div>
+            <div>
+                <a href="/projects">Projects</a>
+            </div>
+            <div>
+                <a href="/about">About</a>
+            </div>
+            <div>
+                <a href="/contact">contact</a>
+            </div>
+            <div class="download1">
+                <a href="./resume.pdf" download><i class="fa-solid fa-download" style="margin-right: 0.2rem;"></i>Download Resume</a>
+            </div>
+        </div>    
     </header>
+    <script src="/js/script.js"></script>
+
 </body>
 </html>
