--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,7 @@
                 <!-- <img src="pic.png" alt="pic"> -->
             </div>
             <div class="right" >
-                some information about me
+                Full Stack Developer specializing in building <br> responsive web applications using Node.js, Express, and MongoDB.
             </div>
         </div>
     </main>
