--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -11,7 +11,7 @@
             <div class="footer">
                 <div>
                     <h2>Lokesh Ramineni.</h2>
-                    <p>some info</p>
+                    <p style="opacity: 0.8;">Full Stack Developer crafting responsive and <br>user-focused web experiences.</p>
                 </div>
                 <div class="space" >
                     <h3>Quick Links</h3>
@@ -22,8 +22,7 @@
                 </div>
                 <div class="space" >
                     <h3>Resources</h3>
-                    <a href="#">Blog</a><br>
-                    <a href="#">Resume</a><br>
+                    <a href="/LOKESH_RESUME.pdf" download>Resume</a><br>
                     <a href="#">Certificatons</a><br>
                 </div>
                 <div class="space" >
