--- a/public/projects.css
+++ b/public/projects.css
@@ -40,5 +40,12 @@
     transform: translateY(-6px);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
-
+div a{
+    text-decoration: none;
+    
+}
+.links{
+    margin-top: 1rem;
+    color: #2F7F7A;
+}
 
