--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -20,6 +20,9 @@
                         <span class="tech_stack"><%= projects[i].tech_stack[j] %></span>
                     <% } %>
                 </div>
+                <div class="links">
+                    <a href="<%= projects[i].livelink %>" class="project_link">View Project</a>
+                </div>
             </div>
         <% }; %>
     </div>
