--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -20,7 +20,7 @@
                         <span class="tech_stack"><%= projects[i].tech_stack[j] %></span>
                     <% } %>
                 </div>
-                <div class="links">
+                <div class="livelinks">
                     <a href="<%= projects[i].livelink %>" class="project_link">View Project</a>
                 </div>
             </div>
