--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -29,7 +29,7 @@
                     </div>
                     <div>
                             <p style="margin: 0 0 5px 0; opacity: 0.8;">Phone</p>
-                            <a href="tel:+919999999999" style="text-decoration: none; color:black">+91-9999999999</a>
+                            <a href="tel:+919381626122" style="text-decoration: none; color:black">+91-9381626122</a>
                     </div>
                     </div>
                 <div class="location" style="display: flex; align-items: center; gap: 10px; margin-top: 20px;"    >
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="below">
-                <div class="info" >
+                <div class="info ADJUST" >
                     <i class="fa-solid fa-location-arrow"></i>
                 </div>
                 <div>
@@ -72,7 +72,7 @@
                     <label for="message">Message</label><br>
                     <textarea style="width: 97%;"  id="message" name="message" rows="10" placeholder="Your Message" required></textarea>
                 </div>
-                <button  >
+                <button >
                     Submit
                 </button>
             </form>
