--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -48,7 +48,7 @@
                 <a href="/contact">contact</a>
             </div>
             <div class="download1">
-                <a href="./resume.pdf" download><i class="fa-solid fa-download" style="margin-right: 0.2rem;"></i>Download Resume</a>
+                <a href="./LOKESH_RESUME.pdf" download><i class="fa-solid fa-download" style="margin-right: 0.2rem;"></i>Download Resume</a>
             </div>
         </div>    
     </header>
