--- a/public/contact.css
+++ b/public/contact.css
@@ -100,3 +100,9 @@ button{
     margin-top: 8px;
     margin-left: 5px;
 }
+@media (max-width: 980px) {
+  .container {
+    grid-template-columns: 1fr;  
+    padding-right: 1rem;
+  }
+}
